--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "expo": "~48.0.6",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
